# hands-on-llm

./: README.md  small_llm.py
small_llm/: .gitignore  main.py  pyproject.toml  samll_llm_from_scratch.ipynb
